# Ab_programacion

./: .gitignore  README.md
Ab_programacion1/: Ab_programacion1.cpp  Ab_programacion1.h  CMakeLists.txt  main.cpp
Ab_programacion1/include/: Cita.h  Medico.h  Paciente.h
Ab_programacion1/src/: Cita.cpp  Medico.cpp  Paciente.cpp  main.cpp
